# multiagent-1

./: .env.example  .gitignore  PLAN.md  README.md  design-0838d4e2.md  design-7f0ff42a.md  design-d9d4a050.md  design.md  github-real-smoke-20260303-122807.md  pyproject.toml
config/: agents.yaml  projects.yaml
docs/tdd/: plane_issue_fill_guide.md  plane_issue_template.md
docs/tdd/examples/: sample_issue_feature.md
src/app/: comment_utils.py  config.py  logging_config.py  main.py  models.py  orchestrator.py  quality_gate.py  review_arbiter.py  state_machine.py  store.py  tdd_parser.py  workspace_manager.py
src/app/adapters/: github_client.py  plane_client.py
src/app/adapters/agents/: cli_adapter.py  mock_adapter.py
src/app/api/: internal.py  webhooks.py
src/app/notify/: feishu.py
src/app/orch/: comments.py  events.py  governance.py  pr_sync.py  review_context.py
tests/: conftest.py  test_api.py  test_cli_agent_adapter.py  test_github_client.py  test_orchestrator.py  test_plane_client.py  test_quality_gate.py  test_review_config.py  test_state_machine.py  test_store.py  test_tdd_parser.py  test_webhook_notify.py
tests/orchestrator/: helpers.py  test_arbiter_governance.py  test_comments_and_pr_sync.py  test_events_and_tdd.py  test_pipeline_flow.py  test_review_context.py  test_workspace_isolation.py
